# weela_chess

./: .gitignore  check_gpus.py  nick_tech_youtube_tutorial.py  pyproject.toml
client/: validate_uci_codes.py
legacy/: mcts_with_naive_option.py
sandbox/: play_against_stockfish.py  stockfish-ubuntu-x86-64-avx2.tar:Zone.Identifier  stockfish_play_itself.py
sandbox/alpha_zero_scratch_tute/: alpha_zero_play.py  alpha_zero_train.py  ttt_alpha_mcts.py  ttt_policy_net.py  ttt_stat_mcts.py
sandbox/classifier_training/: analyze_board_descripts.py  play_model_against_stockfish.py  train_chess_model_numpy_torch.py  train_chess_model_torch_marimo.py  train_chess_model_torch_streaming.py
sandbox/classifier_training/train_classif_with_board_descripts/: play_descript_model_against_stockfish.py  train_classif_stream_descripts.py
sandbox/general_chess/: alpha_zero_train.py  az_pipeline_cli.py  az_pipeline_mgr.py  az_pipeline_mo.py  az_play_dataset_mgr.py  chess_res_net.py  pipeline_models.py
sandbox/general_ttt/: alpha_zero_eval_play.py  alpha_zero_train.py
sandbox/nick_youtube_tute/: lmdb_torch_train_chess.py  train_chess_model.py  train_chess_model_numpy_torch.ipynb  train_chess_model_numpy_torch_backup.py
sandbox/prepare_ollama_data/: record_ollama_elite_descriptions.py
sandbox/pytorch_mnist/: pytorch_mnist_main.py
src/torch_utils/: torch_train_utils.py
src/weela_chess/: project_files.py
src/weela_chess/alphazero/: alpha_zero.py  alpha_zero_fn_approach.py  aux_mcts_interfaces.py  mcts.py  scratch_code.py
src/weela_chess/chess_utils/: all_possible_moves.py  stockfish_eval.py
src/weela_chess/data_io/: convert_pgn_to_lmdb.py  convert_pgn_to_lmdb_huge.py  convert_pgn_to_np.py  convert_pgn_to_tf.py  ollama_board_state_converter.py  pgn_db_utils.py  tf_record_utils.py
src/weela_chess/datasets/: board_descript_preloader.py  move_only_preloader.py  torch_dataloader_preloader.py  torch_move_dataset_factory.py
src/weela_chess_recreate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/datasets/: test_torch_dataloader_preloader.py
(+17 files in other folders)
