[project]
name = "weela-chess-recreate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.1",
    "jupyter>=1.1.1",
    "jupytext>=1.16.6",
    "more-itertools>=10.6.0",
    "numpy==1.*",
    "pydantic>=2.10.6",
    "tqdm>=4.67.1",
    "lmdb>=1.6.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
#    "tensorflow[and-cuda]>=2.18.0",
#    "torch<=2.4.0",
#    "torchvision<=0.19.0",

#[[tool.uv.index]]
#name = "pytorch-cu118"
#url = "https://download.pytorch.org/whl/cu118"
#explicit = true
#
#[tool.uv.sources]
#torch = [
#  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
#]
#torchvision = [
#  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
#]
